--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "merge": "^2.1.1",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
